# HW_07

./: config.ini  main.py  pyproject.toml  seeds.py
migration/versions/: 0fe6a08fb77f_init.py  6c4f64079e67_init.py  c30a3fd64f86_init.py
