[tool.poetry]
name = "hw-07"
version = "0.1.0"
description = ""
authors = ["SergiiGoncharov13 <goncharov.s.work@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_07"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.6.0"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
